improved file structure and undoing of user deletes

--- a/thingsilike.html
+++ b/thingsilike.html
@@ -17,9 +17,9 @@
     <button id="submitter" class="btn btn-primary">add it</button>
     <button id="canceler" class="btn btn-warning">cancel</button>
   </div>
-  <table class="table table-sm">
+  <table class="mx-3 table table-sm table-inverse">
     <thead>
-      <tr>
+      <tr class="bg-light">
         <th>id</th>
         <th>first name</th>
         <th>last name</th>
@@ -31,7 +31,7 @@
     <tbody id="tbod"></tbody>
   </table>
 
-  <script src="thingsilike.js"></script>
+  <script src="js/thingsilike.js"></script>
 
 </body>
 </html>
